Correcting overflow on mobile devices

--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ body
     .navbar .navbar-brand, .navbar .nav-link {
         color: #555;
     }
+    body{
+        overflow-x: hidden; 
+    }
 }
 
 
